# draft

./: Cargo.toml  LICENSE  README.md
crates/draft_ast/: Cargo.toml
crates/draft_ast/src/: common.rs  untyped.rs
crates/draft_common/: Cargo.toml
crates/draft_common/src/: errors.rs  lib.rs  span.rs
crates/draft_lex/: Cargo.toml
crates/draft_lex/src/: errors.rs  lib.rs  tokens.rs
crates/draft_parse/: Cargo.toml
crates/draft_parse/src/: atom.rs  errors.rs  expr.rs  item.rs  lib.rs  stmt.rs
crates/draft_typeck/: Cargo.toml
crates/draft_typeck/src/: errors.rs  ex.rs  lib.rs
crates/draft_typeck/src/check/: expr.rs  pipeline.rs  stmt.rs  typ.rs
crates/draft_typeck/src/check/early/: functions.rs  types.rs
crates/draft_typeck/src/check/late/: functions.rs  mod.rs  types.rs
crates/draft_typeck/src/cx/: module.rs  package.rs
crates/draft_typeck/src/inference/: README.md  cause.rs  coercion.rs  generics.rs
crates/draft_typeck/src/resolve/: resolve.rs  rib.rs
crates/draft_typeck/src/typ/: cx.rs  res.rs  typ.rs
