[package]
name = "draft_parse"
version = "0.1.0"
edition = "2024"

[dependencies]
draft_common = { path = "../draft_common" }
draft_lex = { path = "../draft_lex" }
draft_ast = { path = "../draft_ast" }
thiserror = "2.0.12"
miette = { git = "https://github.com/draft-rs/miette.git", features = ["fancy"] }
ecow = "0.2.6"
