[package]
name = "draft_typeck"
version = "0.1.0"
edition = "2024"

[dependencies]
draft_lex = { path = "../draft_lex" }
draft_parse = { path = "../draft_parse" }
draft_common = { path = "../draft_common" }
draft_ast = { path = "../draft_ast" }
miette = { git = "https://github.com/draft-rs/miette.git", features = ["fancy"] }
camino = "1.1.10"
thiserror = "2.0.12"
walkdir = "2.5.0"
petgraph = "0.8.2"
indexmap = "2.12.0"
tracing = "0.1.44"
id-arena = "2.2.1"
